--- a/src/pages/StatCharts/DataFilter/DataFilter.module.scss
+++ b/src/pages/StatCharts/DataFilter/DataFilter.module.scss
@@ -1,3 +1,10 @@
 .dataFilterText {
   text-align: center;
 }
+
+.dataFilterDateRange {
+  text-align: center;
+  @media (min-width: 600px) {
+    text-align: start;
+  }
+}
